cod-tools (unreleased)

  * Added:
    - COD::AtomNeighbours:
      - the neighbour_list_to_cif_datablock() subroutine.
    - COD::CIF::Data::CODFlags:
      - the has_partially_occupied_ordered_atoms() subroutine.
    - COD::CIF::Data::ExcludeFromStatistics:
      - the 'has_partially_occupied_ordered_atoms' option to
        exclude_from_statistics() subroutine.
    - cif_validate:
      - the '--range-su-multiplier' option;
      - the '--ddl1-add-dictionary', '--ddl1-dictionaries',
        '--ddl1-clear-dictionaries' options;
      - the '--ddl2-add-dictionary', '--ddl2-dictionaries',
        '--ddl2-clear-dictionaries' options.
  * Changed:
    - COD::CIF::Data::AtomList:
      - updated the datablock_from_atom_array() subroutine to ignore
        missing atom information.
    - COD::CIF::DDL::Ranges:
      - updated the is_in_range() subroutine to accept an optional
        multiplier that should be applied to the standard uncertainty (s.u.)
        when determining if a numeric value resides in the specified range.  

cod-tools (2.12)

  * Added:
    - COD::AtomNeighbours:
      - the neighbour_list_to_graph() subroutine.
    - COD::CIF::Data::CODNumbers:
      - allowing passing an option to include attached hydrogens in formula
        calculation (off by default).
    - cif_cod_numbers:
      - the '--use-attached-hydrogens' option.
  * Fixed:
    - codcif:
      - properly reporting CIF save_ frames outside data blocks.
    - cif_overlay:
      - fixing description of atom_rms() subroutine.

cod-tools (2.11)

  * Added:
    - COD::Algebra::GaussJordan:
      - the gj_elimination() subroutine;
      - the gj_elimination_non_zero_elements() subroutine;
      - the back_substitution() subroutine which fully replaces
        the deprecated backward_elimination() subroutine;
    - the COD::Algebra::GaussJordanBigRat module which serves as a drop-in
      replacement for the COD::Algebra::GaussJordan module, but uses BigRat