@@ -36,6 +36,7 @@ use COD::CIF::DDL::DDL1 qw( canonicalise_value
 use COD::CIF::DDL::Ranges qw( parse_range
                               range_to_string
                               is_in_range );
+use COD::CIF::DDL::Validate qw( canonicalise_tag );
 use COD::CIF::Tags::Manage qw( exclude_tag
                                has_special_value
                                has_numeric_value
@@ -639,21 +640,6 @@ for my $filename ( @ARGV ) {
             warn "NOTE, $note" . "\n"
         }
     }
-}
-
-##
-# Canonicalises a CIF data name to a standard form used in validation messages.
-#
-# @param $tag
-#       Data name that should be canonicalised.
-# @return
-#       Canonicalised data name.
-##
-sub canonicalise_tag
-{
-    my ($tag) = @_;
-
-    return canonical_tag_name($tag);
 }
 
 ##
