@@ -8,6 +8,8 @@ cod-tools (unreleased)
     - COD::CIF::Data::ExcludeFromStatistics:
       - the 'has_partially_occupied_ordered_atoms' option to
         exclude_from_statistics() subroutine.
+    - COD::CIF::DDL::Validate:
+      - the canonicalise_tag() subroutine.
     - cif_validate:
       - the '--range-su-multiplier' option;
       - the '--ddl1-add-dictionary', '--ddl1-dictionaries',
